PlayerAccountModule : Test Case finish
ปรับปรุง : ปรับปรุงการเขียน Test case ของทุก ๆ module ให้เป็น format เดียวกัน

Signed-off-by: Nittaya <nittaya@perfenterprise.com>

--- a/src/CasinovaAll/Specs/TheS.Casinova.MagicNine.WebExecutors.Specs/TheS.Casinova.MagicNine.WebExecutors.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.MagicNine.WebExecutors.Specs/TheS.Casinova.MagicNine.WebExecutors.Specs.csproj
@@ -108,8 +108,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>StopAutoBetFeature.feature</DependentUpon>
     </Compile>
-    <Compile Include="WebExecutors\UnitSpecs\SingleBetExecutorSpecs.cs" />
-    <Compile Include="WebExecutors\UnitSpecs\StartAutoBetExecutorSpecs.cs" />
+    <Compile Include="WebExecutors\UnitSpecs\BetInformationSpecs.cs" />
+    <Compile Include="WebExecutors\UnitSpecs\GamePlayAutoBetInformationSpecs.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Modules\Chat\TheS.Casinova.Chat.BackProviders\TheS.Casinova.Chat.BackProviders.csproj">
