--- a/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.WebExecutors/TheS.Casinova.MagicNine.WebExecutors.csproj
+++ b/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.WebExecutors/TheS.Casinova.MagicNine.WebExecutors.csproj
@@ -48,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validators\GamePlayAutoBetInformation_StartAutoBetValidators.cs" />
+    <Compile Include="Validators\GamePlayAutoBetInformation_StopAutoBetValidators.cs" />
     <Compile Include="WebExecutors\ListActiveGameRoundInfoExecutor.cs" />
     <Compile Include="WebExecutors\ListBetLogExecutor.cs" />
     <Compile Include="WebExecutors\ListGamePlayAutoBetInfoExecutor.cs" />
@@ -55,9 +57,7 @@
     <Compile Include="WebExecutors\StartAutoBetExecutor.cs" />
     <Compile Include="WebExecutors\StopAutoBetExecutor.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Validators\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
       <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
