--- a/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.WebExecutors/TheS.Casinova.ChipExchange.WebExecutors.csproj
+++ b/src/CasinovaAll/Modules/ChipExchange/TheS.Casinova.ChipExchange.WebExecutors/TheS.Casinova.ChipExchange.WebExecutors.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validators\VoucherInformation_PayVoucherValidators.cs" />
+    <Compile Include="Validators\VoucherInformation_VoucherToBonusChipsValidators.cs" />
     <Compile Include="WebExecutors\ChipsToBonusChipsExecutor.cs" />
     <Compile Include="WebExecutors\ChipsToMoneyExecutor.cs" />
     <Compile Include="WebExecutors\GetVoucherCodeExecutor.cs" />
