TwowinsGame : ปรับ Model
Signed-off-by: Nittaya <nittaya@perfenterprise.com>

--- a/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.Models/TheS.Casinova.TwoWins.Models.csproj
+++ b/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.Models/TheS.Casinova.TwoWins.Models.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Models\RoundInformation.cs" />
     <Compile Include="Models\RoundWinnerInformation.cs" />
     <Compile Include="Models\SettingInformation.cs" />
+    <Compile Include="Models\TotalBetInformation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
