--- a/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.WebExecutors/TheS.Casinova.TwoWins.WebExecutors.csproj
+++ b/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.WebExecutors/TheS.Casinova.TwoWins.WebExecutors.csproj
@@ -47,13 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebExecutors\ChangeBetInfoExecutor.cs" />
-    <Compile Include="WebExecutors\GetGameStatusExecutor.cs" />
-    <Compile Include="WebExecutors\ListBetLogInfoExecutor.cs" />
-    <Compile Include="WebExecutors\ListGamePlayInfoExecutor.cs" />
-    <Compile Include="WebExecutors\ListGameRoundInfoExecutor.cs" />
-    <Compile Include="WebExecutors\ListRangeActionLogExecutor.cs" />
-    <Compile Include="WebExecutors\ListSingleActionLogExecutor.cs" />
+    <Compile Include="WebExecutors\ChangeBetExecutor.cs" />
     <Compile Include="WebExecutors\RangeBetExecutor.cs" />
     <Compile Include="WebExecutors\SingleBetExecutor.cs" />
   </ItemGroup>
