--- a/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.DAL.Contracts/TheS.Casinova.TwoWins.DAL.Contracts.csproj
+++ b/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.DAL.Contracts/TheS.Casinova.TwoWins.DAL.Contracts.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command\GetRoundWinnerAmountCommand.cs" />
     <Compile Include="DAL\ITwoWinsGameDataQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
