--- a/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.WebExecutors/TheS.Casinova.TwoWins.WebExecutors.csproj
+++ b/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.WebExecutors/TheS.Casinova.TwoWins.WebExecutors.csproj
@@ -48,10 +48,19 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebExecutors\ChangeBetExecutor.cs" />
+    <Compile Include="WebExecutors\GetGameStatusExecutor.cs" />
+    <Compile Include="WebExecutors\ListBetDataExecutor.cs" />
+    <Compile Include="WebExecutors\ListBetLogInfoExecutor.cs" />
+    <Compile Include="WebExecutors\ListGamePlayInfoExecutor.cs" />
+    <Compile Include="WebExecutors\ListGameRoundInfoExecutor.cs" />
+    <Compile Include="WebExecutors\ListRangeActionLogExecutor.cs" />
+    <Compile Include="WebExecutors\ListSingleActionLogExecutor.cs" />
     <Compile Include="WebExecutors\RangeBetExecutor.cs" />
     <Compile Include="WebExecutors\SingleBetExecutor.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Validators\" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
       <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
