--- a/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.WebExecutors/TheS.Casinova.TwoWins.WebExecutors.csproj
+++ b/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.WebExecutors/TheS.Casinova.TwoWins.WebExecutors.csproj
@@ -47,6 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validators\BetInformation_ChangeBetInfoValidators.cs" />
+    <Compile Include="Validators\BetInformation_SingleBetValidators.cs" />
+    <Compile Include="Validators\RangeBetInformation_RangeBetValidators.cs" />
     <Compile Include="WebExecutors\ChangeBetExecutor.cs" />
     <Compile Include="WebExecutors\GetGameStatusExecutor.cs" />
     <Compile Include="WebExecutors\ListBetDataExecutor.cs" />
@@ -58,9 +61,7 @@
     <Compile Include="WebExecutors\RangeBetExecutor.cs" />
     <Compile Include="WebExecutors\SingleBetExecutor.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Validators\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
       <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
