--- a/src/CasinovaAll/Modules/Shared/TheS.Casinova.Common.Commands/TheS.Casinova.Common.Commands.csproj
+++ b/src/CasinovaAll/Modules/Shared/TheS.Casinova.Common.Commands/TheS.Casinova.Common.Commands.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IGenerateTrackingID.cs" />
+    <Compile Include="Services\ImplementationServices\GenerateTrackingID.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Commands\" />
