--- a/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.DAL.BackContracts/TheS.Casinova.TwoWins.DAL.BackContracts.csproj
+++ b/src/CasinovaAll/Modules/TwoWins/TheS.Casinova.TwoWins.DAL.BackContracts/TheS.Casinova.TwoWins.DAL.BackContracts.csproj
@@ -48,9 +48,11 @@
   <ItemGroup>
     <Compile Include="Commands\CreateActionLogInfoCommand.cs" />
     <Compile Include="Commands\CreateBetInfoCommand.cs" />
+    <Compile Include="Commands\CreateRangeBetInfoCommand.cs" />
+    <Compile Include="Commands\GetBetInfoCommand.cs" />
     <Compile Include="Commands\GetRoundInfoCommand.cs" />
     <Compile Include="Commands\GetUserProfileCommand.cs" />
-    <Compile Include="Commands\UpdateRoundCommand.cs" />
+    <Compile Include="Commands\UpdateRoundInfoCommand.cs" />
     <Compile Include="Commands\UpdateUserProfileCommand.cs" />
     <Compile Include="DAL\ITwowinsDataAccess.cs" />
     <Compile Include="DAL\ITwowinsDataBackQuery.cs" />
