commit การปรับปรุงและเพิ่มเติมของ Profile

--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AjaxControlToolkit, Version=3.5.40412.0, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -152,26 +155,29 @@
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\Banners.ascx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\Index.aspx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\MyVideo.aspx" />
-    <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\Option.ascx" />
+    <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\Option.aspx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\PostNewVideos.ascx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\SubmenuVideo.ascx" />
     <Content Include="Areas\Map\Views\Map\Index.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Archievement.aspx" />
+    <Content Include="Areas\Profile\Views\Profile\BlogComment.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Comment_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Compare_Archeivement.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\DGTreeview.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\DragandDropTreeview.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\editors.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Filter.ascx" />
     <Content Include="Areas\Profile\Views\Profile\FriendList.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\Inbox.ascx" />
     <Content Include="Areas\Profile\Views\Profile\index_comment.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Blog.aspx" />
-    <Content Include="Areas\Profile\Views\Profile\Inbox.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Index.aspx" />
     <Content Include="Areas\Profile\Views\Profile\Photo.aspx" />
     <Content Include="Areas\Profile\Views\Profile\photocomment.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Popup_Comment_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\Profile.aspx" />
-    <Content Include="Areas\Profile\Views\Profile\Report_Archeivement.ascx" />
-    <Content Include="Areas\Profile\Views\Profile\SeeAll_Archeivement.ascx" />
     <Content Include="Areas\Profile\Views\Profile\SubMenu.ascx" />
+    <Content Include="Areas\Profile\Views\Profile\test.aspx" />
     <Content Include="Areas\Scholarship\Views\Scholarship\AdvanceSearch.ascx" />
     <Content Include="Areas\Scholarship\Views\Scholarship\Banners.ascx" />
     <Content Include="Areas\Scholarship\Views\Scholarship\Donate.aspx" />
@@ -181,14 +187,28 @@
     <Content Include="Areas\Scholarship\Views\Scholarship\SubMenu.ascx" />
     <Content Include="Areas\Scholarship\Views\Scholarship\Tournament.aspx" />
     <Content Include="club.html" />
+    <Content Include="Content\Calendar.css" />
+    <Content Include="Content\context-menu.css" />
+    <Content Include="Content\drag-drop-folder-tree.css" />
     <Content Include="Content\galleria.css" />
     <Content Include="Content\images\1.png" />
     <Content Include="Content\images\2.png" />
     <Content Include="Content\images\4.png" />
     <Content Include="Content\images\5.png" />
+    <Content Include="Content\images\a.JPG" />
+    <Content Include="Content\images\addphoto.JPG" />
     <Content Include="Content\images\avartar_index.png" />
+    <Content Include="Content\images\bin.png" />
+    <Content Include="Content\images\buttons.gif" />
     <Content Include="Content\images\calendar.gif" />
     <Content Include="Content\images\comment.png" />
+    <Content Include="Content\images\context-menu-gradient.gif" />
+    <Content Include="Content\images\dhtmlgoodies_folder.gif" />
+    <Content Include="Content\images\dhtmlgoodies_minus.gif" />
+    <Content Include="Content\images\dhtmlgoodies_plus.gif" />
+    <Content Include="Content\images\dhtmlgoodies_sheet.gif" />
+    <Content Include="Content\images\dragDrop_ind1.gif" />
+    <Content Include="Content\images\dragDrop_ind2.gif" />
     <Content Include="Content\images\e1.png" />
     <Content Include="Content\images\e2.png" />
     <Content Include="Content\images\f1.png" />
@@ -196,8 +216,20 @@
     <Content Include="Content\images\f3.png" />
     <Content Include="Content\images\f4.png" />
     <Content Include="Content\images\f5.png" />
+    <Content Include="Content\images\folder_close.gif" />
+    <Content Include="Content\images\folder_dots.gif" />
+    <Content Include="Content\images\folder_folder.gif" />
+    <Content Include="Content\images\folder_lastsub.gif" />
+    <Content Include="Content\images\folder_open.gif" />
+    <Content Include="Content\images\folder_sub.gif" />
     <Content Include="Content\images\go.jpg" />
     <Content Include="Content\images\go.png" />
+    <Content Include="Content\images\LD1.png" />
+    <Content Include="Content\images\LD2.png" />
+    <Content Include="Content\images\LD3.png" />
+    <Content Include="Content\images\mooeditable-extras-toolbarbuttons-tango.png" />
+    <Content Include="Content\images\mooeditable-toolbarbuttons-silk.png" />
+    <Content Include="Content\images\mooeditable-toolbarbuttons-tango.png" />
     <Content Include="Content\images\next-horizontal.png" />
     <Content Include="Content\images\next-vertical.png" />
     <Content Include="Content\images\nextPageArrow.gif" />
@@ -206,8 +238,10 @@
     <Content Include="Content\images\prev-vertical.png" />
     <Content Include="Content\images\prevPageArrow.gif" />
     <Content Include="Content\images\ProfileAvatar.png" />
+    <Content Include="Content\images\sss.JPG" />
     <Content Include="Content\images\star.PNG" />
     <Content Include="Content\images\start.png" />
+    <Content Include="Content\images\toolbar.gif" />
     <Content Include="Content\img\flowing-rock.jpg" />
     <Content Include="Content\img\grass-blades.jpg" />
     <Content Include="Content\img\ladybug.jpg" />
@@ -220,21 +254,20 @@
     <Content Include="Content\jquery-ui-1.8.6.custom.css" />
     <Content Include="Content\jquery.ad-gallery.css" />
     <Content Include="Content\jquery.autocomplete.css" />
+    <Content Include="Content\jquery.cleditor.css" />
+    <Content Include="Content\jquery.contextMenu.css" />
+    <Content Include="Content\jquery.treeview.css" />
+    <Content Include="Content\MooEditable.css" />
     <Content Include="Content\profile\1.jpg" />
-    <Content Include="Content\profile\1.png" />
     <Content Include="Content\profile\10.jpg" />
     <Content Include="Content\profile\11.jpg" />
     <Content Include="Content\profile\12.jpg" />
     <Content Include="Content\profile\13.jpg" />
     <Content Include="Content\profile\14.jpg" />
     <Content Include="Content\profile\2.jpg" />
-    <Content Include="Content\profile\2.png" />
     <Content Include="Content\profile\3.jpg" />
-    <Content Include="Content\profile\3.png" />
     <Content Include="Content\profile\4.jpg" />
-    <Content Include="Content\profile\4.png" />
     <Content Include="Content\profile\5.jpg" />
-    <Content Include="Content\profile\5.png" />
     <Content Include="Content\profile\6.jpg" />
     <Content Include="Content\profile\7.jpg" />
     <Content Include="Content\profile\8.jpg" />
@@ -310,9 +343,26 @@
     <Content Include="Content\ui.dialog.css" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="photocomment_dialog.html" />
-    <Content Include="profile.html" />
+    <Content Include="images\context-menu-gradient.gif" />
+    <Content Include="images\dhtmlgoodies_folder.gif" />
+    <Content Include="images\dhtmlgoodies_minus.gif" />
+    <Content Include="images\dhtmlgoodies_plus.gif" />
+    <Content Include="images\dhtmlgoodies_sheet.gif" />
+    <Content Include="images\dragDrop_ind1.gif" />
+    <Content Include="images\dragDrop_ind2.gif" />
+    <Content Include="images\folder.gif" />
+    <Content Include="images\folder_close.gif" />
+    <Content Include="images\folder_dots.gif" />
+    <Content Include="images\folder_folder.gif" />
+    <Content Include="images\folder_lastsub.gif" />
+    <Content Include="images\folder_open.gif" />
+    <Content Include="images\folder_sub.gif" />
+    <Content Include="images\minus.gif" />
+    <Content Include="images\plus.gif" />
+    <Content Include="images\sheet.gif" />
+    <Content Include="organize.html" />
     <Content Include="scholarship.html" />
+    <Content Include="Scripts\ajax.js" />
     <Content Include="Scripts\ajaxScripts\Date.HijriCalendar.debug.js" />
     <Content Include="Scripts\ajaxScripts\Date.HijriCalendar.js" />
     <Content Include="Scripts\ajaxScripts\Date.UmAlQuraCalendar.debug.js" />
@@ -523,11 +573,14 @@
     <Content Include="Scripts\ajaxScripts\MicrosoftAjaxWebServices.js" />
     <Content Include="Scripts\ajaxScripts\Start.debug.js" />
     <Content Include="Scripts\ajaxScripts\Start.js" />
+    <Content Include="Scripts\context-menu.js" />
+    <Content Include="Scripts\drag-drop-folder-tree.js" />
     <Content Include="Scripts\jquery-1.3.2-vsdoc.js" />
     <Content Include="Scripts\jquery-1.3.2.js" />
     <Content Include="Scripts\jquery-1.4.2-vsdoc.js" />
     <Content Include="Scripts\jquery-1.4.2.min.js" />
     <Content Include="Scripts\jquery-1.4.4.min.js" />
+    <Content Include="Scripts\jquery-ui-1.7.1.custom.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.1.custom.js" />
     <Content Include="Content\jquery.hoverscroll-0.2.2.css" />
     <Content Include="Scripts\jquery-ui-1.8.6.custom.min.js" />
@@ -535,6 +588,8 @@
     <Content Include="Scripts\jquery.ad-gallery.js" />
     <Content Include="Scripts\jquery.ad-gallery.pack.js" />
     <Content Include="Scripts\jquery.autocomplete.js" />
+    <Content Include="Scripts\jquery.cleditor.min.js" />
+    <Content Include="Scripts\jquery.contextMenu.js" />
     <Content Include="Scripts\jquery.galleria.js" />
     <Content Include="Scripts\jquery.hoverscroll-0.2.2.js" />
     <Content Include="Scripts\jquery.jcarousel.min.js" />
@@ -542,6 +597,9 @@
     <Content Include="Scripts\jquery.pager.js" />
     <Content Include="Scripts\jquery.popupWindow.js" />
     <Content Include="Scripts\jquery.tmpl.js" />
+    <Content Include="Scripts\jquery.treeview.js" />
+    <Content Include="Scripts\MooEditable.js" />
+    <Content Include="Scripts\mootools.js" />
     <Content Include="test.txt" />
     <Content Include="Views\Home\AboutUs.aspx" />
     <Content Include="Views\Home\AdvanceSearch.ascx" />
@@ -590,6 +648,8 @@
     <Content Include="Areas\Profile\Views\Profile\Web.config" />
     <Content Include="Areas\Scholarship\Views\Scholarship\Web.config" />
     <Content Include="Areas\Map\Views\Map\Web.config" />
+    <None Include="folderTree_updateItem.php" />
+    <None Include="saveNodes.php" />
     <None Include="T4MVC.settings.t4" />
     <None Include="T4MVC.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
