แก้ไข Site.css/ทำในส่วน Module Game
Signed-off-by: marut <>

--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -143,11 +143,19 @@
     <Content Include="Areas\Club\Views\Club\SubMenu.ascx" />
     <Content Include="Areas\Game\Views\Game\AdvanceSearch.ascx" />
     <Content Include="Areas\Game\Views\Game\Banners.ascx" />
+    <Content Include="Areas\Game\Views\Game\Bookmark.aspx" />
+    <Content Include="Areas\Game\Views\Game\CommentGame.ascx" />
+    <Content Include="Areas\Game\Views\Game\Filter_InviteFriend.ascx" />
     <Content Include="Areas\Game\Views\Game\GameOption.aspx" />
     <Content Include="Areas\Game\Views\Game\Index.aspx" />
+    <Content Include="Areas\Game\Views\Game\Invite_Friend.ascx" />
+    <Content Include="Areas\Game\Views\Game\NewCommentGame.ascx" />
+    <Content Include="Areas\Game\Views\Game\PlayGame.aspx" />
+    <Content Include="Areas\Game\Views\Game\ReportCommentGame.ascx" />
+    <Content Include="Areas\Game\Views\Game\ReportProblemGame.ascx" />
     <Content Include="Areas\Game\Views\Game\SubMenu.ascx" />
     <Content Include="Areas\Game\Views\Game\Tournament.aspx" />
-    <Content Include="Areas\Game\Views\Game\Upload.aspx" />
+    <Content Include="Areas\Game\Views\Game\Upload.ascx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\AdvanceSearch.ascx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\Banners.ascx" />
     <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\CommentVideo.ascx" />
